--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
 			rel="stylesheet"
 		/>
 		
-		<link href="./_app/immutable/assets/2.lH_PCDIm.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.jhCU_qkt.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C4_Kn47L.js">
+		<link href="./_app/immutable/assets/2.B9-Jxhlq.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CQ3Adc7Y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DY6HHfWo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/cqBM8VM2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D4GclNn2.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.u1Qs1Gam.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.96ntcix7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C1YXqSHx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dw0eAB99.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CNyMmX_b.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BmZC27mE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DNNmD4Tu.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DoYiVAtI.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" style="padding: 0; margin: 0">
-		<div><!--[--><!--[--><!----><!----><div class="container svelte-8dxusn"><div class="navbar svelte-8dxusn">Helloz</div> <section class="child svelte-8dxusn"><div class="console-top svelte-8dxusn"><div class="screen svelte-8dxusn"><div class="screentab svelte-8dxusn" id="gd-screen" style="display: none;"><div class="screen-left svelte-8dxusn"><div class="sc-heading svelte-8dxusn">Graphic Design</div> <div class="sc-text svelte-8dxusn">Let me be the branding guy that advises you, that a brand with a human touch will
+		<div><!--[--><!--[--><!----><!----><div class="container svelte-nw9yqt"><div class="navbar svelte-nw9yqt">Helloz</div> <section class="child svelte-nw9yqt"><div class="console-top svelte-nw9yqt"><button id="insta" class="svelte-nw9yqt">Insta</button> <button id="contact" class="svelte-nw9yqt">Contact</button> <div class="screen svelte-nw9yqt"><div class="screentab svelte-nw9yqt" id="gd-screen" style="display: none;"><div class="screen-left svelte-nw9yqt"><div class="sc-heading svelte-nw9yqt">Graphic Design</div> <div class="sc-text svelte-nw9yqt">Let me be the branding guy that advises you, that a brand with a human touch will
 							always triumph over brands that passes AI generated media as their public face. If
 							you're looking a truly versatile humanistic artist who knows his stuff inside out,
-							then I'd be happy to breathe life into your ideas.</div> <div class="btn-box svelte-8dxusn"><button class="svelte-8dxusn">Dribble</button> <button class="svelte-8dxusn">Insta</button></div></div> <div class="screen-right svelte-8dxusn"><div class="list2 svelte-8dxusn"><li class="svelte-8dxusn">Posters</li> <li class="svelte-8dxusn">Brochures</li> <li class="svelte-8dxusn">Social Media Posts</li> <li class="svelte-8dxusn">PPT/Slide Decks</li> <li class="svelte-8dxusn">Reports / Infographics</li> <li class="svelte-8dxusn">Book Covers/Pages</li> <li class="svelte-8dxusn">Visiting Cards</li> <li class="svelte-8dxusn">Playing Cards</li> <li class="svelte-8dxusn">Large Flexes/Banners</li> <li class="svelte-8dxusn">Branding</li> <li class="svelte-8dxusn">Theme Building</li> <li class="svelte-8dxusn">Environment Design</li> <li class="svelte-8dxusn">(Game) Level Design</li> <li class="svelte-8dxusn">Design Consultancy</li></div></div></div> <div class="screentab svelte-8dxusn" id="wd-screen" style="display: block;"><div class="screen-left svelte-8dxusn"><div class="sc-heading svelte-8dxusn">Web Design</div> <div class="sc-text svelte-8dxusn">A good website could give your brand/business a different feel; the one you want
+							then I'd be happy to breathe life into your ideas.</div></div> <div class="screen-right svelte-nw9yqt"><div class="list2 svelte-nw9yqt"><li class="svelte-nw9yqt">Posters</li> <li class="svelte-nw9yqt">Brochures</li> <li class="svelte-nw9yqt">Social Media Posts</li> <li class="svelte-nw9yqt">PPT/Slide Decks</li> <li class="svelte-nw9yqt">Reports / Infographics</li> <li class="svelte-nw9yqt">Book Covers/Pages</li> <li class="svelte-nw9yqt">Visiting Cards</li> <li class="svelte-nw9yqt">Playing Cards</li> <li class="svelte-nw9yqt">Large Flexes/Banners</li> <li class="svelte-nw9yqt">Branding</li> <li class="svelte-nw9yqt">Theme Building</li> <li class="svelte-nw9yqt">Environment Design</li> <li class="svelte-nw9yqt">(Game) Level Design</li> <li class="svelte-nw9yqt">Design Consultancy</li></div></div></div> <div class="screentab svelte-nw9yqt" id="wd-screen" style="display: block;"><div class="screen-left svelte-nw9yqt"><div class="sc-heading svelte-nw9yqt">Web Design</div> <div class="sc-text svelte-nw9yqt">A good website could give your brand/business a different feel; the one you want
 							customers to experience. The perk of working with a top tier developer, is however
-							vague your ideas are, I can not just refine them, but also turn them into reality.</div> <div class="btn-box svelte-8dxusn"><button class="svelte-8dxusn">Dribble</button> <button class="svelte-8dxusn">Insta</button></div></div> <div class="screen-right svelte-8dxusn"><div class="list2 svelte-8dxusn"><li class="svelte-8dxusn">UX / UI</li> <li class="svelte-8dxusn">Branding</li> <li class="svelte-8dxusn">Portfolio Websites</li> <li class="svelte-8dxusn">Product Listings (not e-commerce)</li> <li class="svelte-8dxusn">Content Management System</li> <li class="svelte-8dxusn">Wordpress/Wix Redesign</li> <li class="svelte-8dxusn">Single Page Apps</li> <li class="svelte-8dxusn">Restaurant Web Menus</li></div></div></div></div> <div class="pseudo svelte-8dxusn"><div class="start-select svelte-8dxusn"><button class="svelte-8dxusn">Portfolio</button> <button class="svelte-8dxusn">Contact</button></div> <div class="controls-main svelte-8dxusn"><div class="screen2 svelte-8dxusn">lolcats</div> <div class="tab-btns svelte-8dxusn"><button class="svelte-8dxusn">A</button> <button class="svelte-8dxusn">B</button></div></div></div></div></section> <section class="child svelte-8dxusn"><div class="console-bot svelte-8dxusn"><div class="screen svelte-8dxusn"></div></div></section> <p class="svelte-8dxusn">...</p></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+							vague your ideas are, I can not just refine them, but also turn them into reality.</div></div> <div class="screen-right svelte-nw9yqt"><div class="list2 svelte-nw9yqt"><li class="svelte-nw9yqt">UX / UI</li> <li class="svelte-nw9yqt">Branding</li> <li class="svelte-nw9yqt">Portfolio Websites</li> <li class="svelte-nw9yqt">Product Listings (not e-commerce)</li> <li class="svelte-nw9yqt">Content Management System</li> <li class="svelte-nw9yqt">Wordpress/Wix Redesign</li> <li class="svelte-nw9yqt">Single Page Apps</li> <li class="svelte-nw9yqt">Restaurant Web Menus</li></div></div></div></div> <div class="pseudo svelte-nw9yqt"><div class="start-select svelte-nw9yqt"><button class="svelte-nw9yqt">Dribble</button> <button class="svelte-nw9yqt">Misc. Skills</button></div> <div class="controls-main svelte-nw9yqt"><div class="d-pad svelte-nw9yqt"><button id="up" class="svelte-nw9yqt">⬆️</button> <button id="left" class="svelte-nw9yqt">⬅️</button> <button id="right" class="svelte-nw9yqt">➡️</button> <button id="down" class="svelte-nw9yqt">⬇️</button></div> <div class="screen2 svelte-nw9yqt"><div id="welcome" class="svelte-nw9yqt">welcome to jxnesforge <p class="svelte-nw9yqt">[Feel free to click around]</p></div> <div class="misctab svelte-nw9yqt"><h1 class="svelte-nw9yqt">Audio Mixing</h1> <p class="svelte-nw9yqt">Audacity, Da Vinci. Basic sound editing, mixing? No worries.</p></div> <div class="misctab svelte-nw9yqt"><h1 class="svelte-nw9yqt">Content Writing</h1> <p class="svelte-nw9yqt">Why would I hit up Grammarly when I am simply better?</p></div> <div class="misctab svelte-nw9yqt"><h1 class="svelte-nw9yqt">Photography</h1> <p class="svelte-nw9yqt">I know my way around f-stops, composition, and golden ratios.</p></div> <div class="misctab svelte-nw9yqt"><h1 class="svelte-nw9yqt">Data Analytics</h1> <p class="svelte-nw9yqt">I mean, I used to work as a data scientist back in my coroporate days.</p></div> <div class="misctab svelte-nw9yqt"><h1 class="svelte-nw9yqt">Voiceover Acting</h1> <p class="svelte-nw9yqt">*ahem* yeah.</p></div></div> <div class="tab-btns svelte-nw9yqt"><button class="svelte-nw9yqt">A</button> <button class="svelte-nw9yqt">B</button></div></div></div></div></section> <section class="child svelte-nw9yqt"><div class="console-bot svelte-nw9yqt"><div class="screen svelte-nw9yqt"></div></div></section> <p class="svelte-nw9yqt">...</p></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_bohr0f = {
+					__sveltekit_1ipveih = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.jhCU_qkt.js"),
-						import("./_app/immutable/entry/app.u1Qs1Gam.js")
+						import("./_app/immutable/entry/start.CQ3Adc7Y.js"),
+						import("./_app/immutable/entry/app.96ntcix7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
