--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 			rel="stylesheet"
 		/>
 		
-		<link href="./_app/immutable/assets/2.Byf8F6s4.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CqoIBxqD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cq7ZYYRi.js">
+		<link href="./_app/immutable/assets/2.HAr9o3nj.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ChncX_pt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CeDRGaNX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CMfICJNU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/3UsqN55q.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BBqo5S1c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.WwVGXqG6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BEMRjjqB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CLT7BJLU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C5CXzu6H.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/tuCZLn1G.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.jZlEJHF-.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.GFYZhAL-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.8tUrsxqM.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" style="padding: 0; margin: 0">
 		<div><!--[--><!--[--><!----><!----><div class="container"><div class="navbar"><img src="./Logo_Main.svg" alt="" srcset="" id="logo"/></div> <section class="child"><div class="console-top"><button id="insta"><img src="./insta.svg" alt="" srcset=""/></button> <button id="contact"><img src="./mail.svg" alt="" srcset=""/></button> <div class="screen"><div id="welcome" style="display: flex;"><div class="wtg">Welcome to <span>Junesforge</span></div> <div class="tagline">A design studio, from BLR, India.</div></div> <div class="screentab" id="gd-screen" style="display: none;"><div class="screen-left"><div class="sc-heading">Graphic Design</div> <div class="sc-text">Let me be the branding guy that advises you, that a brand with a human touch will
@@ -38,15 +38,15 @@
 			
 			<script>
 				{
-					__sveltekit_uh807z = {
+					__sveltekit_1j4qqac = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CqoIBxqD.js"),
-						import("./_app/immutable/entry/app.BBqo5S1c.js")
+						import("./_app/immutable/entry/start.ChncX_pt.js"),
+						import("./_app/immutable/entry/app.WwVGXqG6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
