--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 			rel="stylesheet"
 		/>
 		
-		<link href="./_app/immutable/assets/2.HAr9o3nj.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ChncX_pt.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CeDRGaNX.js">
+		<link href="./_app/immutable/assets/2.DTzDgAtG.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DH8-AnLh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/qG-3l1D6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CMfICJNU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/3UsqN55q.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.WwVGXqG6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.AJCyiS1O.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BEMRjjqB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CLT7BJLU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C5CXzu6H.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/tuCZLn1G.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.jZlEJHF-.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.8tUrsxqM.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BsJZYG2o.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" style="padding: 0; margin: 0">
 		<div><!--[--><!--[--><!----><!----><div class="container"><div class="navbar"><img src="./Logo_Main.svg" alt="" srcset="" id="logo"/></div> <section class="child"><div class="console-top"><button id="insta"><img src="./insta.svg" alt="" srcset=""/></button> <button id="contact"><img src="./mail.svg" alt="" srcset=""/></button> <div class="screen"><div id="welcome" style="display: flex;"><div class="wtg">Welcome to <span>Junesforge</span></div> <div class="tagline">A design studio, from BLR, India.</div></div> <div class="screentab" id="gd-screen" style="display: none;"><div class="screen-left"><div class="sc-heading">Graphic Design</div> <div class="sc-text">Let me be the branding guy that advises you, that a brand with a human touch will
@@ -34,19 +34,19 @@
 							you're looking a truly versatile humanistic artist who knows his stuff inside out,
 							then I'd be happy to breathe life into your ideas.</div></div> <div class="screen-right"><div class="text-bubbles"><li>Posters</li> <li>Brochures</li> <li>Social Media Posts</li> <li>PPT/Slide Decks</li> <li>Reports / Infographics</li> <li>Book Covers/Pages</li> <li>Visiting Cards</li> <li>Playing Cards</li> <li>Large Flexes/Banners</li> <li>Branding</li> <li>Theme Building</li> <li>Environment Design</li> <li>(Game) Level Design</li> <li>Design Consultancy</li></div></div></div> <div class="screentab" id="wd-screen" style="display: none;"><div class="screen-left"><div class="sc-heading">Web Design</div> <div class="sc-text">A good website could give your brand/business a different feel; the one you want
 							customers to experience. The perk of working with a top tier developer, is however
-							vague your ideas are, I can not just refine them, but also turn them into reality.</div></div> <div class="screen-right"><div class="text-bubbles"><li>UX / UI</li> <li>Branding</li> <li>Portfolio Websites</li> <li>Product Listings (not e-commerce)</li> <li>Content Management System</li> <li>Wordpress/Wix Redesign</li> <li>Single Page Apps</li> <li>Restaurant Web Menus</li></div></div></div> <!--[!--><!--]--></div> <div class="pseudo"><div class="controls-main"><div class="d-pad"><button disabled></button> <button id="up"><img src="./up.svg" alt="↑"/></button> <button id="left"><img src="./left.svg" alt="←"/></button> <button id="right"><img src="./right.svg" alt="→"/></button> <button id="down"><img src="./down.svg" alt="↓"/></button></div> <div class="tab-btns"><button id="A">A</button> <button id="B">B</button> <button id="X">X</button> <button id="Y">Y</button></div></div></div></div></section> <section class="child"><div class="console-bot"><div class="fold"><div class="fold1"></div> <div class="fold2"></div> <div class="fold1"></div></div> <div class="logo-circle"></div> <div class="screen2"><div class="misctab"><h1>Miscellaneous Skills</h1> <p>(Swipe up here for more)</p></div> <div class="misctab"><h1>Audio Mixing</h1> <p>Audacity, Da Vinci. Basic sound editing, mixing? No worries.</p></div> <div class="misctab"><h1>Content Writing</h1> <p>Why would I hit up Grammarly when I am simply better?</p></div> <div class="misctab"><h1>Photography</h1> <p>I know my way around f-stops, composition, and golden ratios.</p></div> <div class="misctab"><h1>Data Analytics</h1> <p>I mean, I used to work as a data scientist back in my coroporate days.</p></div> <div class="misctab"><h1>Voiceover Acting</h1> <p>*ahem* yeah.</p></div></div> <div class="dual-speaker"><div class="speaker"><div class="cut"></div> <div class="cut"></div> <div class="cut"></div> <div class="cut"></div></div> <div class="speaker"><div class="cut"></div> <div class="cut"></div> <div class="cut"></div> <div class="cut"></div></div></div></div></section> <p>...</p></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+							vague your ideas are, I can not just refine them, but also turn them into reality.</div></div> <div class="screen-right"><div class="text-bubbles"><li>UX / UI</li> <li>Branding</li> <li>Portfolio Websites</li> <li>Product Listings (not e-commerce)</li> <li>Content Management System</li> <li>Wordpress/Wix Redesign</li> <li>Single Page Apps</li> <li>Restaurant Web Menus</li></div></div></div> <!--[!--><!--]--></div> <div class="pseudo"><div class="controls-main"><div class="d-pad"><button disabled></button> <button id="up"><img src="./up.svg" alt="↑"/></button> <button id="left"><img src="./left.svg" alt="←"/></button> <button id="right"><img src="./right.svg" alt="→"/></button> <button id="down"><img src="./down.svg" alt="↓"/></button></div> <div class="tab-btns"><button id="A">A</button> <button id="B">B</button> <button id="Y">Y</button> <button id="X">X</button></div></div></div></div></section> <section class="child"><div class="console-bot"><div class="fold"><div class="fold1"></div> <div class="fold2"></div> <div class="fold1"></div></div> <div class="logo-circle"></div> <div class="screen2"><div class="misctab"><h1>Miscellaneous Skills</h1> <p>(Swipe up here for more)</p></div> <div class="misctab"><h1>Audio Mixing</h1> <p>Audacity, Da Vinci. Basic sound editing, mixing? No worries.</p></div> <div class="misctab"><h1>Content Writing</h1> <p>Why would I hit up Grammarly when I am simply better?</p></div> <div class="misctab"><h1>Photography</h1> <p>I know my way around f-stops, composition, and golden ratios.</p></div> <div class="misctab"><h1>Data Analytics</h1> <p>I mean, I used to work as a data scientist back in my coroporate days.</p></div> <div class="misctab"><h1>Voiceover Acting</h1> <p>*ahem* yeah.</p></div></div> <div class="dual-speaker"><div class="speaker"><div class="cut"></div> <div class="cut"></div> <div class="cut"></div> <div class="cut"></div></div> <div class="speaker"><div class="cut"></div> <div class="cut"></div> <div class="cut"></div> <div class="cut"></div></div></div></div></section> <p>...</p></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1j4qqac = {
+					__sveltekit_k7zja1 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ChncX_pt.js"),
-						import("./_app/immutable/entry/app.WwVGXqG6.js")
+						import("./_app/immutable/entry/start.DH8-AnLh.js"),
+						import("./_app/immutable/entry/app.AJCyiS1O.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
